--- a/tools/cli/src/webpack/template.html
+++ b/tools/cli/src/webpack/template.html
@@ -24,7 +24,7 @@
     <meta name="emotion-insertion-point" content="" />
     <meta property="description" content="<%= DESCRIPTION %>" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:url" content="https://app.affine.pro/" />
+    <meta name="twitter:url" content="https://info.nitrous.pw/" />
     <meta
       name="twitter:title"
       content="AFFiNE: There can be more than Notion and Miro."
@@ -38,7 +38,7 @@
     />
     <meta property="og:type" content="website" />
     <meta property="og:description" content="<%= DESCRIPTION %>" />
-    <meta property="og:url" content="https://app.affine.pro/" />
+    <meta property="og:url" content="https://info.nitrous.pw/" />
     <meta property="og:image" content="https://affine.pro/og.jpeg" />
   </head>
 
